--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 jdk:
   - openjdk11
-script:
-  - test/run.sh
+provider: script
+script: bash scripts/deploy.sh
 cache:
   directories:
     - $HOME/.m2
