--- a/blog/src/main/resources/hibernate.properties
+++ b/blog/src/main/resources/hibernate.properties
@@ -3,6 +3,6 @@ db.url=jdbc:mysql://${APP_BLOG_DB_HOST}:${APP_BLOG_DB_PORT}/${APP_BLOG_DB_NAME}?
 db.username=${APP_BLOG_DB_USER}
 db.password=${APP_BLOG_DB_PASSWORD}
 
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
