spring boot: started demo project

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,27 @@
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**
+!**/src/test/**
+
 *.DS_Store
 *.sw?
 .#*
 *#
 *~
 .classpath
-.idea/*
 target/*
-*.iml
+
+### STS ###
+.apt_generated
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
 .idea
+*.iws
+*.iml
+*.ipr
