--- a/boot/demo/pom.xml
+++ b/boot/demo/pom.xml
@@ -54,6 +54,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,5 +70,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
