spring boot tutorials: implemented security basic

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,30 @@ target/*
 *.iws
 *.iml
 *.ipr
+
+
+/Servers
+/.metadata
+/application.yml
+/application.properties
+bin
+/data
+.sts4-cache/
+.attach_pid*
+.DS_Store
+*.sw*
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/# See http://help.github.com/ignore-files/ for more about ignoring files.
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+node/
+node_modules/
+e2e/*.js
+e2e/*.map
