--- a/spring-tutorials/tut-spring-security-and-angular-js/spring-session/pom.xml
+++ b/spring-tutorials/tut-spring-security-and-angular-js/spring-session/pom.xml
@@ -2,16 +2,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework.guides</groupId>
-    <artifactId>tut-spring-security-and-angular-js</artifactId>
+    <groupId>org.demo</groupId>
+    <artifactId>pairs-spring-session</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Spring Security Angular Samples</name>
+    <name>Spring Pairs Samples Spring Session</name>
 
     <modules>
-        <module>basic</module>
-        <module>single</module>
-        <module>vanilla</module>
-        <module>spring-session</module>
+        <module>ui</module>
+        <module>resource</module>
     </modules>
+
 </project>
