spring boot tutorials: implemented data rest hypermedia

--- a/spring-tutorials/spring-data-rest/pom.xml
+++ b/spring-tutorials/spring-data-rest/pom.xml
@@ -20,7 +20,7 @@
 
     <modules>
         <module>basic</module>
-<!--        <module>hypermedia</module>-->
+        <module>hypermedia</module>
 <!--        <module>conditional</module>-->
 <!--        <module>events</module>-->
 <!--        <module>security</module>-->
