spring boot tutorials: implemented data rest conditional

--- a/spring-tutorials/spring-data-rest/pom.xml
+++ b/spring-tutorials/spring-data-rest/pom.xml
@@ -21,7 +21,7 @@
     <modules>
         <module>basic</module>
         <module>hypermedia</module>
-<!--        <module>conditional</module>-->
+        <module>conditional</module>
 <!--        <module>events</module>-->
 <!--        <module>security</module>-->
     </modules>
