--- a/spring-tutorials/spring-data-rest/pom.xml
+++ b/spring-tutorials/spring-data-rest/pom.xml
@@ -22,8 +22,7 @@
         <module>basic</module>
         <module>hypermedia</module>
         <module>conditional</module>
-<!--        <module>events</module>-->
-<!--        <module>security</module>-->
+        <module>websocket</module>
     </modules>
     <dependencies>
         <dependency>
